--- a/src/styles/atom/strike.css
+++ b/src/styles/atom/strike.css
@@ -1,5 +1,5 @@
-.container{
-    background: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+.container {
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
     width: 0;
     height: 0.2em;
     margin: 6rem 0 6rem 175.0rem;
