--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,11 @@
 .container {
     height: 100%;
+    transition: all 1s;
+}
+
+.container-with-menu {
+    height: 100%;
+    transform: scale(0.8) translateX(9rem);
+    filter: blur(5px);
+    transition: all 1s;
 }
