--- a/src/styles/atom/menuItem.css
+++ b/src/styles/atom/menuItem.css
@@ -9,7 +9,7 @@
     padding-left: 6rem;
     width: 40rem;
     overflow: hidden;
-    transition: background-color 1s, width 1s, font-size 0.3s;
+    transition: color 0.3s, width 0.3s, font-size 0.3s;
     color: #eeeff7;
     text-decoration: none;
     border-bottom: solid #424242 thin;
@@ -17,7 +17,6 @@
 }
 
 .container:hover{
-    background-color: #EA2E49;
     width: 100vw;
     font-size: 4.2rem;
 }
