--- a/src/styles/molecules/menu.css
+++ b/src/styles/molecules/menu.css
@@ -4,11 +4,15 @@
     flex-flow: column;
     justify-content: center;
     padding: 2rem 0;
+    position: absolute;
+    z-index: 100;
+    background-color: rgba(28, 29, 33, 0.58);
+    width: 100%;
+    transition: all 1s;
 }
 
 .menu{
     height: 100%;
     display: flex;
     align-items: center;
-
 }
