--- a/src/styles/atom/menuItem.css
+++ b/src/styles/atom/menuItem.css
@@ -5,7 +5,7 @@
     font-size: 3.2rem;
     height: 100%;
     display: flex;
-    align-items: center;
+    justify-content: center;
     padding-left: 6rem;
     width: 40rem;
     overflow: hidden;
@@ -14,9 +14,26 @@
     text-decoration: none;
     border-bottom: solid #424242 thin;
     white-space: nowrap;
+    flex-flow: column;
 }
 
 .container:hover{
     width: 100vw;
     font-size: 4.2rem;
+    .year{
+        height: 5rem;
+    }
+}
+
+.text{
+
+}
+
+.year{
+    overflow: hidden;
+    height: 0rem;
+    transition: all 0.3s;
+    transition-delay: 0.1s;
+    font-size: 2.2rem;
+    color: #EA2E49;
 }
