--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,8 @@
+a {
+    text-decoration: none;
+    color: #eeeff7;
+}
+
 .container {
     height: 100%;
     transition: all 1s;
@@ -8,4 +13,14 @@
     transform: scale(0.8) translateX(9rem);
     filter: blur(5px);
     transition: all 1s;
+}
+
+.audio{
+    font-size: 2.6rem;
+    padding: 4rem;
+    text-align: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 10000;
 }
