--- a/src/styles/pages/1first.css
+++ b/src/styles/pages/1first.css
@@ -26,15 +26,13 @@
 }
 
 .text{
-    background-color: #EA2E49;
     height: 30rem;
     width: 30rem;
     margin: 2rem;
-    border: solid aqua thick;
 }
 
 .image-container{
-    background-color: #eeeff7;
+    font-size: 2.5rem;
     height: 30rem;
     width: 30rem;
     margin: 2rem;
