--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -15,7 +15,7 @@ a {
     transition: all 1s;
 }
 
-.audio{
+.audio {
     font-size: 2.6rem;
     padding: 4rem;
     text-align: right;
@@ -24,6 +24,13 @@ a {
     z-index: 10000;
     transition: all 0.3s;
 }
-audio:hover{
+
+.audio > .soundIcon {
+    position: absolute;
+    left: 0;
+    cursor: pointer;
+}
+
+audio:hover {
     transform: scale(2);
 }
