--- a/src/styles/atom/image.css
+++ b/src/styles/atom/image.css
@@ -1,31 +1,26 @@
 .container{
-
+    height: 100%;
 }
 
 .image{
-    position: absolute;
-    width: 25rem;
-
+    width: 100%;
     transition: all 0.3s;
 }
 
 .image:hover ~ .background{
-    width: 3rem;
-    margin-left: 22rem;
+    height: 3rem;
 }
 
 .image:hover{
-
+    transform: scale(1.1);
 }
 
 .background{
     position: absolute;
     background-color: #0086b3;
-    width: 1rem;
-    height: 25rem;
-    margin-left: 24rem;
+    width: 100%;
+    height: 1rem;
+    bottom: 0;
     transition: all 0.3s;
-    writing-mode: vertical-rl;
     font-size: 1.4rem;
-    padding: 1rem;
 }
