--- a/src/styles/atom/image.css
+++ b/src/styles/atom/image.css
@@ -1,26 +1,43 @@
+@import "../base.css";
+
 .container{
     height: 100%;
-}
-
-.image{
     width: 100%;
-    transition: all 0.3s;
+    cursor: pointer;
 }
 
-.image:hover ~ .background{
-    height: 3rem;
-}
-
-.image:hover{
-    transform: scale(1.1);
-}
-
-.background{
-    position: absolute;
-    background-color: #0086b3;
+.content{
+    height: 100%;
     width: 100%;
-    height: 1rem;
-    bottom: 0;
+    background-color: rgba(28, 29, 33, 0.88);
+    padding: 2rem;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    transform: translateY(5rem);
     transition: all 0.3s;
-    font-size: 1.4rem;
+    opacity: 0;
+}
+
+.container:hover .content{
+    opacity: 1;
+    transform: translateY(0rem);
+}
+
+.title{
+    font-size: 3.6rem;
+    text-align: center;
+}
+
+.year{
+    font-size: 2.4rem;
+    text-align: center;
+    color: var(--accentColor);
+}
+
+.shortDesc{
+    margin-top: 2rem;
+    font-size: 1.8rem;
+    font-weight: 100;
 }
