--- a/src/styles/atom/image.css
+++ b/src/styles/atom/image.css
@@ -52,4 +52,7 @@
     width: 50vh;
     position: absolute;
     z-index: -1;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
